--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "oxlint src",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "pdf-from-pngs": "node --max-old-space-size=8192 --expose-gc scripts/createPDFFromPNGs.js"
   },
   "dependencies": {
     "@types/jszip": "^3.4.0",
@@ -22,6 +23,7 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
+    "canvas": "^3.2.0",
     "oxlint": "^1.24.0",
     "typescript": "^5.9.3",
     "vite": "^7.1.12"
