--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vitejs/plugin-react": "^5.1.0",
     "canvas": "^3.2.0",
     "oxlint": "^1.24.0",
+    "prettier": "^3.6.2",
     "typescript": "^5.9.3",
     "vite": "^7.1.12"
   },
