--- a/package.json
+++ b/package.json
@@ -33,9 +33,5 @@
     "typescript": "^5.9.3",
     "vite": "^7.1.12"
   },
-  "private": true,
-  "prettier": {
-    "semi": false,
-    "singleQuote": true
-  }
+  "private": true
 }
